--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "demo",
   "main": "App.js",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
